# truetype

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
benches/: names.rs
src/: band.rs  char_mapping.rs  character_mapping.rs  fixed.rs  font_header.rs  glyph.rs  glyph_data.rs  glyph_location.rs  glyph_mapping.rs  horizontal_header.rs  horizontal_metrics.rs  lib.rs  macros.rs  mapping.rs  maximum_profile.rs  naming_table.rs  number.rs  offset_table.rs  postscript.rs  postscript_info.rs  primitive.rs  tag.rs  tape.rs  windows_metrics.rs
src/compound/: char_mapping.rs  font_header.rs  horizontal_header.rs  horizontal_metrics.rs  maximum_profile.rs  mod.rs  naming_table.rs  offset_table.rs  postscript.rs  postscript_info.rs  windows_metrics.rs
src/encoding/: macintosh.rs  mod.rs  unicode.rs  windows.rs
src/naming_table/: language.rs  mod.rs  name.rs  platform.rs
src/naming_table/encoding/: macintosh.rs  mod.rs  unicode.rs  windows.rs
src/naming_table/language/: macintosh.rs  mod.rs  windows.rs
src/primitive/: mod.rs
src/tables/: character_mapping.rs  font_header.rs  glyph_data.rs  glyph_mapping.rs  horizontal_header.rs  horizontal_metrics.rs  maximum_profile.rs  mod.rs  offsets.rs  postscript.rs  windows_metrics.rs
src/tables/names/: language.rs  mod.rs  name.rs  platform.rs
src/tables/names/encoding/: macintosh.rs  unicode.rs  windows.rs
tests/: char_mapping.rs  character_mapping.rs  common_test.rs  fixture.rs  font_header.rs  glyph_data.rs  glyph_mapping.rs  horizontal_header.rs  horizontal_metrics.rs  lib.rs  maximum_profile.rs  names.rs  naming_table.rs  offset_table.rs  offsets.rs  postscript.rs  windows_metrics.rs
tests/common/: mod.rs
tests/fixture/: mod.rs
tests/fixtures/char_mapping/MPlus2P-Regular.ttf/: table0_format4.txt  table3_format6.txt  table5_format12.txt
tests/fixtures/char_mapping/OpenSans-Italic.ttf/: table0_format4.txt
tests/fixtures/char_mapping/SourceSerifPro-Regular.otf/: table1_format6.txt  table2_format4.txt
tests/fixtures/char_mapping/VeraMono-Roman.ttf/: table0_format0.txt  table1_format4.txt
tests/fixtures/char_mappings/MPlus2P-Regular.ttf/: table1_format12.txt  table3_format6.txt
tests/fixtures/char_mappings/OpenSans-Italic.ttf/: table0_format4.txt
tests/fixtures/char_mappings/SourceSerifPro-Regular.otf/: table0_format4.txt
tests/fixtures/char_mappings/VeraMono-Roman.ttf/: table1_format4.txt
tests/support/: mod.rs
