[package]
name = "truetype"
version = "0.42.6"
edition = "2021"
license = "Apache-2.0/MIT"
authors = [
    "Boris-Chengbiao Zhou <bobo1239@web.de>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Vladimir Vukicevic <vladimir@pobox.com>",
]
description = "The package provides a parser for TrueType fonts."
documentation = "https://docs.rs/truetype"
homepage = "https://github.com/bodoni/truetype"
repository = "https://github.com/bodoni/truetype"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "truetype", "typeface", "typography"]
exclude = ["tests/fixtures/*"]

[dependencies]
typeface = "0.3.0"

[features]
# https://github.com/google/fonts/issues/5551
ignore-invalid-composite-glyph-flags = []
# https://github.com/google/fonts/issues/5805
# https://github.com/web-platform-tests/wpt/issues/37713
ignore-invalid-language-ids = []
