[package]
name = "truetype"
version = "0.46.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = [
    "Boris-Chengbiao Zhou <bobo1239@web.de>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Vladimir Vukicevic <vladimir@pobox.com>",
]
description = "The package provides a builder and parser of TrueType fonts."
documentation = "https://docs.rs/truetype"
homepage = "https://github.com/bodoni/truetype"
repository = "https://github.com/bodoni/truetype"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "truetype", "typeface", "typography"]
exclude = ["tests/fixtures/*"]

[dependencies]
typeface = "0.4.1"

[features]
# https://github.com/google/fonts/issues/5551
ignore-invalid-component-flags = []
# https://github.com/google/fonts/issues/5724
ignore-invalid-embedding-flags = []
# https://github.com/google/fonts/issues/5805
# https://github.com/web-platform-tests/wpt/issues/37713
ignore-invalid-language-ids = []
